--- a/app/src/main/res/layout/popup_calendar.xml
+++ b/app/src/main/res/layout/popup_calendar.xml
@@ -4,28 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/popup_calendar_root"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
     <DatePicker
         android:id="@+id/popup_calendar_datepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:background="@color/vintage_vanilla_white"
         android:headerBackground="@color/colorPrimary"
-        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintHorizontal_bias="0.41"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/vintage_vanilla_white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:text="@string/show_submissions_newer_than"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline26"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9015625"
+        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="577dp" />
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toTopOf="@+id/guideline26"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="@id/guideline26">
 
         <ImageButton
             android:id="@+id/popup_calendar_cancel"
@@ -45,16 +73,5 @@
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/luke_tick" />
     </RelativeLayout>
-
-    <android.support.constraint.Guideline
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline26"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9015625"
-        tools:layout_editor_absoluteY="577dp"
-        tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/popup_calendar_datepicker"/>
-
 
 </android.support.constraint.ConstraintLayout>
