--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -11,7 +11,7 @@
         android:id="@+id/popupMainContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,30 +23,37 @@
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/guideline7"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/reportDescription"
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:shadowColor="#000000"
-            android:shadowDx="0.0"
-            android:shadowDy="0.0"
-            android:shadowRadius="4.0"
-            android:textColor="@color/vintage_vanilla_white"
-            android:textSize="18sp"
+            android:padding="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/submissionImageMain"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/submissionImageMain"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline11"
             app:layout_constraintVertical_bias="1.0"
-            android:padding="16dp"/>
+            android:id="@+id/scrollView2">
+
+            <TextView
+                android:id="@+id/reportDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="16"
+                android:shadowColor="#000000"
+                android:shadowDx="0.0"
+                android:shadowDy="0.0"
+                android:shadowRadius="4.0"
+                android:textColor="@color/vintage_vanilla_white"
+                android:textSize="18sp" />
+        </ScrollView>
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline7"
@@ -84,46 +91,50 @@
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="225dp" />
 
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline28"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="120dp"
+            app:layout_constraintGuide_percent="0.4" />
+
         <ImageView
             android:id="@+id/submissionSubmitterProfileImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/guideline10"
+            app:srcCompat="@mipmap/ic_launcher"
+            app:layout_constraintRight_toLeftOf="@+id/guideline28"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/submissionTitle" />
 
         <TextView
             android:id="@+id/submissionSubmitterName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Name Here"
             app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submissionTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
+            app:layout_constraintRight_toLeftOf="@+id/submissionReportButton"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/submissionSubmitterRank"
-            android:layout_width="0dp"
+            android:layout_width="164dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:text="Rank Here"
-            app:layout_constraintHorizontal_bias="0.54"
-            app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/submissionSubmitterName"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterName"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/submissionDate"
@@ -137,45 +148,53 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterRank" />
 
-        <LinearLayout
-            android:id="@+id/submissionCategoriesLinear"
+        <HorizontalScrollView
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/guideline25"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/submissionReportButton"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintRight_toRightOf="@+id/submissionImageMain"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <LinearLayout
+                android:id="@+id/submissionCategoriesLinear"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal" />
+
+        </HorizontalScrollView>
 
         <ImageButton
             android:id="@+id/submissionReportButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="40dp"
             android:background="@null"
             android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/guideline25"
+            app:srcCompat="@drawable/luke_report"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_dialog_alert" />
+            app:layout_constraintTop_toTopOf="@+id/guideline7"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp" />
 
 
         <TextView
             android:id="@+id/submissionTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             android:text="Untitled"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reportDescription" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline7"
+            app:layout_constraintRight_toLeftOf="@+id/submissionReportButton"
+            android:layout_marginEnd="8dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline25"
@@ -199,6 +218,17 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="450dp" />
 
+    <ProgressBar
+        android:id="@+id/progressBarSubmissionPopup"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -218,15 +248,4 @@
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/luke_tick" />
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBarSubmissionPopup"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="visible"/>
 </android.support.constraint.ConstraintLayout>
