--- a/app/src/main/res/layout/popup_link.xml
+++ b/app/src/main/res/layout/popup_link.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="500dp">
+    android:layout_height="250dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -17,7 +17,7 @@
         android:id="@+id/linearLayout">
 
         <ImageButton
-            android:id="@+id/categories_accept_button"
+            android:id="@+id/link_popup_dismiss"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
@@ -31,49 +31,40 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9078125"
+        app:layout_constraintGuide_percent="0.8"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="454dp" />
+        tools:layout_editor_absoluteY="150dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
+        android:id="@+id/link_popup_link"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        android:layout_marginBottom="16dp" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/scrollView3"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/link_popup_link">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:maxLines="100"
             android:text="jea boi"
-            android:layout_margin="4dp"/>
+            android:layout_margin="16dp"
+            android:id="@+id/link_popup_desc" />
     </ScrollView>
 
 
