--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -6,38 +6,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="Map fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/leaderboard_map_button" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+    <ListView
+        android:id="@+id/leaderboardListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:id="@+id/user_profile_button"
-        android:text="user profile"
-        app:layout_constraintHorizontal_bias="0.45" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/guideline30"></ListView>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:text="Top Users"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/textView2"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Leaderboard fragment" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        style="@style/TextViewTitle"
+        android:gravity="center"/>
+
+    <android.support.constraint.Guideline
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline30"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.90625"
+        tools:layout_editor_absoluteY="580dp"
+        tools:layout_editor_absoluteX="0dp" />
+    <LinearLayout
+        android:id="@+id/bottomBarMap"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline30"
+        style="@style/BottomActionBar">
+
+        <ImageButton
+            android:id="@+id/button_back"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:scaleType="fitStart"
+            app:srcCompat="@drawable/luke_back" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
