--- a/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/app/src/main/res/layout/leaderboard_list_item.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_height="117dp"
         android:id="@+id/guideline29"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4027778"
+        app:layout_constraintGuide_percent="0.45277777"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="145dp" />
+        tools:layout_editor_absoluteX="163dp" />
 
     <ImageView
         android:layout_width="0dp"
@@ -20,26 +20,27 @@
         app:srcCompat="@drawable/no_category_image"
         android:id="@+id/leaderboard_list_item_user_image"
         android:scaleType="fitCenter"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/guideline29"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.56"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.56"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/leaderboard_list_item_position" />
 
     <TextView
         android:text="Name"
-        android:layout_width="191dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/leaderboard_list_item_username"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guideline29"
-        android:layout_marginStart="8dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:text="Da Boss"
@@ -73,5 +74,21 @@
         app:layout_constraintLeft_toLeftOf="@+id/guideline29"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp" />
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:text="#1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/leaderboard_list_item_position"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        style="@style/TextViewTitle"
+        android:gravity="center"/>
 </android.support.constraint.ConstraintLayout>
