--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/guideline24"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/usernamedisplay"
@@ -29,27 +31,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline24"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/profieImage" />
+        app:layout_constraintTop_toTopOf="@+id/profieImage"
+        style="@style/TextViewTitleMedium"/>
 
-    <ProgressBar
-        android:id="@+id/scoreBar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="112dp"
-        android:layout_marginTop="8dp"
-        android:max="9001"
-        android:progress="4000"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline24"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernamedisplay" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
-        android:layout_width="384dp"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.259375"
@@ -58,7 +46,7 @@
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
-        android:layout_width="384dp"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9"
@@ -143,18 +131,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.4"
-        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteX="144dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/progressTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="9001"
-        app:layout_constraintBottom_toBottomOf="@+id/scoreBar"
-        app:layout_constraintLeft_toLeftOf="@+id/scoreBar"
-        app:layout_constraintRight_toRightOf="@+id/scoreBar"
-        app:layout_constraintTop_toTopOf="@+id/scoreBar" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline24"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/usernamedisplay"
+        style="@style/TextViewDescription"/>
 
 
 </android.support.constraint.ConstraintLayout>
