--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,8 @@
         <item name="android:textColor">@color/storm_dust_gray</item>
     </style>
 
-    <style name="TextViewTitleMedium" parent="TextViewBase">
+
+    <style name="TextViewTitleMedium" parent="TextViewTitleBase">
         <item name="android:textSize">20sp</item>
     </style>
 
@@ -33,7 +34,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="TextViewDescription" parent="TextViewTitleBase">
+    <style name="TextViewDescription" parent="TextViewBase">
         <item name="android:textSize">18sp</item>
         <item name="android:background">@null</item>
         <item name="android:paddingLeft">4dp</item>
