--- a/app/src/main/res/layout/popup_link.xml
+++ b/app/src/main/res/layout/popup_link.xml
@@ -33,7 +33,7 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.8"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="150dp" />
+        tools:layout_editor_absoluteY="200dp" />
 
     <TextView
         android:text="TextView"
@@ -46,7 +46,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="20sp"/>
 
     <ScrollView
         android:layout_width="0dp"
@@ -63,7 +64,8 @@
             android:layout_height="match_parent"
             android:maxLines="100"
             android:text="jea boi"
-            android:layout_margin="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:id="@+id/link_popup_desc" />
     </ScrollView>
 
