--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -14,7 +14,7 @@
         app:layout_constraintLeft_toRightOf="@+id/newSubmissionMapThumbnail"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/take_photo"
+        app:srcCompat="@drawable/luke_take_photo"
         android:scaleType="fitCenter"/>
 
     <ImageView
