--- a/app/src/main/res/layout/popup_admin_marker.xml
+++ b/app/src/main/res/layout/popup_admin_marker.xml
@@ -11,7 +11,7 @@
         android:id="@+id/popupMainContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,7 +28,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/admin_marker" />
 
         <ScrollView
             android:layout_width="0dp"
@@ -98,6 +98,17 @@
             app:layout_constraintBottom_toTopOf="@+id/submissionDate"
             android:layout_marginBottom="8dp" />
 
+        <TextView
+            android:id="@+id/submissionSubmitterName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Name Here"
+            app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/submissionTitle"
+            app:layout_constraintRight_toLeftOf="@+id/submissionDate"
+            android:layout_marginEnd="8dp" />
+
 
     </android.support.constraint.ConstraintLayout>
 
@@ -116,7 +127,7 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
